2011-08-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	general/pandora_help.php: Fixes style in help popups.

2011-08-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Improved tooltip link to
	avoid automatic go to the top of the page

2011-08-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	include/functions_networkmap.php
	include/functions_ui.php: Fixes warnings in apache log due to wrong 
	parameters on graphviz node definitions.

	Fixes: #3375357

2011-08-08  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql, extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added a
	  few more indexes suggested by Manuel Arostegui. Thanks a lot!

2011-08-08  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql, extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added an
	  index on tagente_modulo.nombre to improve alert listings. Thanks to
	  Manuel Arostegui. 

2011-08-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/sla_view.php: Fixed a bug related to a function
	with a wrong name. 

2011-08-08  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	operation/users/user_edit.php
	godmode/setup/setup_visuals.php: Fixed global block size
	edition and user config default block size setting
	for bug 3388207

2011-08-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* images/skin/skin_default/include/styles/pandora.css
	include/styles/pandora.css: pagination margin is very small in some 
	places.

	Fixes: #3388210 	

2011-08-05 Javier Lanz <javier.lanz@artica.es>

	* godmode/servers/plugin.php: Fixed blank names creating & updating
	pluings

	Fixes: #3371409

2011-08-05 Javier Lanz <javier.lanz@artica.es>

	* godmode/servers/recon_script.php: Fixed blank names creating and
	updating reconscripts

	Fixes: #3371409

2011-08-05 Javier Lanz <javier.lanz@artica.es>

	* godmode/tag/edit_tag.php: Fixed blank names creating & updating
	tags

	Fixes: #3371409
