@@ -21,7 +21,7 @@ Los valores posibles del <b>estado de un agente </b> son:
 
 <br><br>
 
-<table width="750px">
+<table width="750px" style="display:inline">
 <tr>
 	<td class="f9i"><?php html_print_image("images/status_sets/default/module_critical.png", false, array("title" => "At least one monitor fails", "alt" => "At least one monitor fails")); ?><?php html_print_image("images/status_sets/faces/module_critical.png", false, array("title" => "At least one monitor fails", "alt" => "At least one monitor fails")); ?></td><td>Al menos un monitor falla</td>
 	<td class="f9i"><?php html_print_image("images/status_sets/default/module_warning.png", false, array("title" => "Change between Green/Red state", "alt" => "Change between Green/Red state")); ?><?php html_print_image("images/status_sets/faces/module_warning.png", false, array("title" => "Change between Green/Red state", "alt" => "Change between Green/Red state")); ?></td><td>Cambia entre el estado Verde/Rojo</td>
